classDiagram
    %% Primary ports and application services for the auth context.
    %% NAMING NOTE: auth keeps use cases in application.service and commands in
    %% application.port.primary.command; product uses application.usecase + application.command.

    class RegisterUserUseCase {
        <<primaryPort>>
        +execute(command: RegisterUserCommand, requestId: UUID, flowId: UUID) Mono~UserRegistrationResult~
    }

    class GoogleAuthenticationUseCase {
        <<primaryPort>>
        +authenticateWithGoogle(command: GoogleAuthCommand, requestId: UUID, flowId: UUID) Mono~UserSession~
    }

    class RegisterUserCommand {
        <<command>>
        -provider: String
        -code: String
        -redirectUri: String
        -registrationDate: Instant
    }

    class GoogleAuthCommand {
        <<command>>
        -code: String
        -redirectUri: String
    }

    class UserRegistrationResult {
        <<result>>
        -session: UserSession
    }

    class RegisterUser {
        <<service>>
        -googleAuthClient: GoogleAuthClient
        -userRepository: UserRepository
        -tokenGenerator: TokenGenerator
    }

    class GoogleAuthentication {
        <<service>>
        -googleAuthClient: GoogleAuthClient
        -userRepository: UserRepository
        -tokenGenerator: TokenGenerator
    }

    RegisterUserUseCase <|.. RegisterUser : implements
    GoogleAuthenticationUseCase <|.. GoogleAuthentication : implements

    RegisterUser ..> RegisterUserCommand : uses
    RegisterUser ..> UserRegistrationResult : produces
    GoogleAuthentication ..> GoogleAuthCommand : uses

    %% UserRepository is a domain secondary port at auth.domain.port.secondary.
